--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
 		</main>
 		<section class="container">
     <h2 id="titulo-form">Adicionar novo paciente</h2>
+	<!--	<span class="mensagens-erro"></span> -->
+		<ul id="mensagens-erro">
+
+		</ul>
     <form id="formulario">
         <div class="grupo">
             <label for="nome">Nome:</label>
@@ -82,6 +86,7 @@
         <div class="grupo">
             <label for="peso">Peso:</label>
             <input id="peso" name="peso" type="text" placeholder="digite o peso do seu paciente" class="campo campo-medio">
+
         </div>
         <div class="grupo">
             <label for="altura">Altura:</label>
